Use padding instead of margin for keyword spacing to fix line wrapping

--- a/src/styles/40k-10e.less
+++ b/src/styles/40k-10e.less
@@ -4042,7 +4042,7 @@
     color: black;
     font-weight: 600;
     white-space: nowrap;
-    margin: 0 0.2em;
+    padding: 0 0.15em;
 
     .rule-button {
       font-size: inherit;
@@ -4076,7 +4076,6 @@
     z-index: 2;
     cursor: pointer;
     white-space: nowrap;
-    margin: 0 0.2em;
 
     padding-left: 2px;
     padding-right: 2px;
